# epi-cf-benchmark

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/multi_policy/: infer_kde.py  infer_transformer.py  train_kde.py  train_st_learner.py  train_transformer.py
experiments/single_policy/: infer_kde.py  infer_transformer.py  train_kde.py  train_st_learner.py  train_transformer.py
scripts/: evaluate_cate.py  evaluate_distribution.py  evaluate_predictions.py  postprocess_predictions.py  preprocess_data.py
src/epicf_benchmark/: __init__.py  data.py  evaluate.py  kde.py  models.py  postprocess.py  preprocessing.py  st_learner.py  transformer.py
