[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "epicf-benchmark"
version = "0.1.0"
description = "Machine-learning baselines and evaluation code for EpiCF-Bench."
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "torch",
  "scikit-learn",
  "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]
